<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_to_your_account"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            style="@style/CustomTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/ProfileTextAppearance">

            <EditText
                android:id="@+id/edtLoginContact"
                android:cursorVisible="true"
                style="@style/ProfileTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_light_line"
                android:fontFamily="@font/antic"
                android:hint="@string/contact_no"
                android:textColorHint="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/primary_dark_cursor"
                android:inputType="phone"
                android:maxLength="10"
                android:selectAllOnFocus="true"
                android:textColor="@color/textViewColor" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/CustomTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/ProfileTextAppearance">

            <EditText
                android:cursorVisible="true"
                android:id="@+id/edtLoginPassword"
                style="@style/ProfileTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_light_line"
                android:fontFamily="@font/antic"
                android:hint="@string/password"
                android:textColorHint="@color/colorDarkGray"
                android:textCursorDrawable="@drawable/primary_dark_cursor"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/textViewColor" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvForgotPassWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"
                android:text="@string/btn_textlogin"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>