<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:id="@+id/rlMainProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrayBackground"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp">
                
                <com.efunhub.starkio.pickpricedealer.Utility.CircularImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="120dp"
                    app:civ_border_color="@color/colorPrimary"
                    android:layout_height="120dp"
                    android:src="@drawable/placeholder_profile_image_dark"/>

                <ImageView
                    android:id="@+id/ivChangePic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom|right"
                    android:src="@drawable/icon_edit" />

            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileName"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:enabled="true"
                    android:fontFamily="@font/antic"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileEmail"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:enabled="true"
                    android:fontFamily="@font/antic"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileContact"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/contact_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileShopName"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="Shop Name"
                    android:inputType="text"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileCountry"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/country"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileState"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/state"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:inputType="none"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileCity"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/city"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:inputType="none"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
            style="@style/CustomTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/ProfileTextAppearance">

            <EditText
                android:id="@+id/edtProfileArea"
                style="@style/ProfileTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_light_line"
                android:fontFamily="@font/antic"
                android:hint="@string/area"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@drawable/primary_dark_cursor" />

        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfileAddress"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/CustomTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/ProfileTextAppearance">

                <EditText
                    android:id="@+id/edtProfilePincode"
                    style="@style/ProfileTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_light_line"
                    android:fontFamily="@font/antic"
                    android:hint="@string/pincode"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:selectAllOnFocus="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@drawable/primary_dark_cursor" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnProfileSave"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/antic"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        </ScrollView>


    </RelativeLayout>
</LinearLayout>